# skEngine

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
assets/shaders/: test.frag  test.vert
interface/: IModel.hpp  IShaderProgram.hpp  ITexture.h
shaders/: test.vert
src/: CMakeLists.txt  Model.cpp  Model.h  glTexture.cpp  glTexture.h  glTexture2D.cpp  glTexture2D.h  glslprogram.cpp  glslprogram.h  glslshader.cpp  glslshader.h  shader.cpp  shader.h
